--- a/IndustrialPlacement/index.html
+++ b/IndustrialPlacement/index.html
@@ -12,27 +12,51 @@
   <meta name="font-size-adjustment" content="2" />
   <link rel="stylesheet" href="styles/slidy.css" type="text/css" />
   <link rel="stylesheet" href="styles/w3c-blue.css" type="text/css" />
+  <link rel="stylesheet" href="styles/custom.css" type="text/css" />
   <script src="scripts/slidy.js" charset="utf-8" type="text/javascript">
 </script>
 </head>
 
 <body>
-  <div class="slide">
-    <h1>Sample heading</h1>
-    <p>This is a template file you can copy and edit on your own server.</p>
-    <ul>
-      <li>point 1</li>
-      <li>point 2</li>
-    </ul>
-  </div>
+    <div class="background">
+      <img alt="" id="head-icon" src="" name="head-icon" />
+      <object id="head-logo" data="graphics/logo.svg" type="image/svg+xml" title="logo">
+      <a href="http://www.lshift.net">
+          <img alt="logo" id="head-logo-fallback" src="graphics/logo.png" name="head-logo-fallback" />
+      </a>
+      </object>
+    </div>
 
-  <div class="slide">
-    <h1>Sample heading</h1>
-    <p>This is a template file you can copy and edit on your own server.</p>
-    <ul>
-      <li>point 1</li>
-      <li>point 2</li>
-    </ul>
-  </div>
+    <div class="slide cover title">
+      <!-- hidden style graphics to ensure they are saved with other content -->
+      <img class="hidden" src="img/bullet.png" alt="" />
+      <img class="hidden" src="img/fold.gif" alt="" />
+      <img class="hidden" src="img/unfold.gif" alt="" />
+      <img class="hidden" src="img/fold-dim.gif" alt="" />
+      <img class="hidden" src="img/nofold-dim.gif" alt="" />
+      <img class="hidden" src="img/unfold-dim.gif" alt="" />
+      <img class="hidden" src="img/bullet-fold.gif" alt="" />
+      <img class="hidden" src="img/bullet-unfold.gif" alt="" />
+      <img class="hidden" src="img/bullet-fold-dim.gif" alt="" />
+      <img class="hidden" src="img/bullet-nofold-dim.gif" alt="" />
+      <img class="hidden" src="img/bullet-unfold-dim.gif" alt="" />
+
+      <div style="position:relative;top:35%;">
+      <center><img src="graphics/logo.png" align="middle" style="vertical-align:middle">
+      <p><a href="mailto:evandrix@gmail.com">Lee Wei Yeong</a> (00466635 / lwy08)
+      </center>
+      </div>
+    </div>
+
+    <div class="slide">
+        <h1>Table of contents</h1>
+
+        <ul class="incremental">
+            <li>Introduction</li>
+            <li><h2 class="incremental"></h2></li>
+            <li>Conclusion</li>
+        </ul>
+    </div>
+
 </body>
 </html>
