revised version - CB/Barclays/DIAAS => 'high street bank'; Buongiorno/KeplarLLP => 'mobile content provider'/'third party agency'; Medical Foundation/TortureCare => 'Freedom from Torture'

--- a/index.html
+++ b/index.html
@@ -32,17 +32,32 @@
 
     <div class="slide cover title" style="padding-left:0;">
       <!-- hidden style graphics to ensure they are saved with other content -->
-      <img class="hidden" src="img/bullet.png" alt="" />
-      <img class="hidden" src="img/fold.gif" alt="" />
-      <img class="hidden" src="img/unfold.gif" alt="" />
-      <img class="hidden" src="img/fold-dim.gif" alt="" />
-      <img class="hidden" src="img/nofold-dim.gif" alt="" />
-      <img class="hidden" src="img/unfold-dim.gif" alt="" />
-      <img class="hidden" src="img/bullet-fold.gif" alt="" />
-      <img class="hidden" src="img/bullet-unfold.gif" alt="" />
       <img class="hidden" src="img/bullet-fold-dim.gif" alt="" />
+      <img class="hidden" src="img/bullet-fold-dim.png" alt="" />
+      <img class="hidden" src="img/bullet-fold.gif" alt="" />
+      <img class="hidden" src="img/bullet-fold.png" alt="" />
       <img class="hidden" src="img/bullet-nofold-dim.gif" alt="" />
+      <img class="hidden" src="img/bullet-nofold-dim.png" alt="" />
+      <img class="hidden" src="img/bullet-nofold.gif" alt="" />
+      <img class="hidden" src="img/bullet-nofold.png" alt="" />
       <img class="hidden" src="img/bullet-unfold-dim.gif" alt="" />
+      <img class="hidden" src="img/bullet-unfold-dim.png" alt="" />
+      <img class="hidden" src="img/bullet-unfold.gif" alt="" />
+      <img class="hidden" src="img/bullet-unfold.png" alt="" />
+      <img class="hidden" src="img/bullet.png" alt="" />
+      <img class="hidden" src="img/fold-bright.gif" alt="" />
+      <img class="hidden" src="img/fold-dim.bmp" alt="" />
+      <img class="hidden" src="img/fold-dim.gif" alt="" />
+      <img class="hidden" src="img/fold.bmp" alt="" />
+      <img class="hidden" src="img/fold.gif" alt="" />
+      <img class="hidden" src="img/nofold-dim.bmp" alt="" />
+      <img class="hidden" src="img/nofold-dim.gif" alt="" />
+      <img class="hidden" src="img/nofold.bmp" alt="" />
+      <img class="hidden" src="img/unfold-bright.gif" alt="" />
+      <img class="hidden" src="img/unfold-dim.bmp" alt="" />
+      <img class="hidden" src="img/unfold-dim.gif" alt="" />
+      <img class="hidden" src="img/unfold.bmp" alt="" />
+      <img class="hidden" src="img/unfold.gif" alt="" />
 
       <div style="position:relative;top:35%;">
       <center>
@@ -60,10 +75,10 @@
             <li>Projects</li>
                 <ol class="incremental">
                     <li>Project Daylight</li>
-                    <li>DIAAS</li>
+                    <li>'high street bank' project</li>
                     <li>CIFFCO website</li>
                     <li>Trac plugins</li>
-                    <li>Buongiorno</li>
+                    <li>'mobile content provider' project</li>
                     <li>ABR Gapfill verification tool</li>
                 </ol>
             <li>Conclusion</li>
@@ -118,17 +133,16 @@
     </div>
 
     <div class="slide watermark">
-        <h1>DIAAS</h1>
+        <h1>'high street bank' project</h1>
 
         <ul class="incremental">
-            <li><u>D</u>ata <u>I</u>ntegration and <u>A</u>nalysis <u>A</u>pplications and <u>S</u>ervices</li>
-            <li>goal:</li>
+            <li>goal</li>
                 <ol class="incremental" style="font-size:100%;">
                     <li><font class="project-text">secure, automated mechanism</font></li>
                     <li><font class="project-text">for transferring bank account statements</font></li>
                     <li><font class="project-text">to accounting partners</font></li>
                 </ol>
-            <li>description:</li>
+            <li>description</li>
                 <ol class="incremental" style="font-size:100%;">
                     <li><font class="project-text">authorisation via web portal</font></li>
                     <li><font class="project-text">encrypted statement transport</font></li>
@@ -139,10 +153,10 @@
     </div>
 
     <div class="slide watermark">
-        <h1>DIAAS &gt; involvement</h1>
+        <h1>'high street bank' project &gt; involvement</h1>
 
         <h2 class="incremental">
-            <img src="graphics/diaas_involvement.png" style="width:910px;height:270px;" />
+            <img src="graphics/msgflow.png" style="width:910px;height:270px;" />
         </h2>
         <ul class="incremental">
             <li>problem: <font class="project-text">sensitive data</font></li>
@@ -159,10 +173,10 @@
     </div>
 
     <div class="slide watermark">
-        <h1>DIAAS &gt; involvement</h1>
+        <h1>'high street bank' project &gt; involvement</h1>
 
         <h2>
-            <img src="graphics/diaas_involvement.png" style="width:910px;height:270px;" />
+            <img src="graphics/msgflow.png" style="width:910px;height:270px;" />
         </h2>
         <ul class="incremental">
             <li>problem: <font class="project-text">expected high volume daily traffic</font></li>
@@ -186,7 +200,7 @@
         </h2>
         <ul class="incremental">
             <li><u>C</u>entre <u>I</u>nternational de <u>F</u>ormation <u>F</u>erroviaire de la <u>C</u>ôte d’<u>O</u>pale</li>
-            <li>goal:</li>
+            <li>goal</li>
                 <ol class="incremental" style="font-size:100%;">
                     <li><font class="project-text">modify website design templates and smart forms</font></li>
                     <li><font class="project-text">from Eurotunnel's live 'Corporate' site</font></li>
@@ -265,14 +279,15 @@
     </div>
 
     <div class="slide watermark">
-        <h1>Buongiorno</h1>
+        <h1>'mobile content provider' project</h1>
 
-        <h2 class="incremental">
-            <img src="graphics/logo_buongiorno.jpg" style="width:385px;height:234px;" />
-            <span class="incremental">Italian mobile content provider</span>
-        </h2>
         <ul class="incremental">
-            <li>goal:</li>
+            <li>joint collaboration between</li>
+                <ol class="incremental" style="font-size:100%;">
+                    <li><font class="project-text">mobile content provider</font></li>
+                    <li><font class="project-text">third party agency</font></li>
+                </ol>
+            <li>goal</li>
                 <ol class="incremental" style="font-size:100%;">
                     <li><font class="project-text">Japanese language detection</font></li>
                     <li><font class="project-text">keyword extraction</font></li>
